# KanbanProject

./: CMakeLists.txt  main.cpp
include/: CardWidget.h  KanbanColumn.h  MainWindow.h
src/: CardWidget.cpp  KanbanColumn.cpp  MainWindow.cpp
